--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,10 @@
             <artifactId>junit-jupiter-api</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.uchagani</groupId>
+            <artifactId>allure-playwright-java</artifactId>
+            <version>1.1.0</version> </dependency>
     </dependencies>
     <build>
         <plugins>
