test complete for create realm and client account

--- a/themes/medad-theme-v5/login/theme.properties
+++ b/themes/medad-theme-v5/login/theme.properties
@@ -1,8 +1,11 @@
-parent=base
+parent=keycloak.v2
 import=common/keycloak
+stylesVersion=3
+version=2.0.1
 
-styles=css/login.css
-stylesCommon=node_modules/@patternfly/patternfly/patternfly.min.css node_modules/patternfly/dist/css/patternfly.min.css node_modules/patternfly/dist/css/patternfly-additions.min.css lib/pficon/pficon.css
+styles=css/login.css css/terms-modal.css
+scripts=js/terms-modal.js
+stylesCommon=vendor/patternfly-v4/patternfly.min.css vendor/patternfly-v3/css/patternfly.min.css vendor/patternfly-v3/css/patternfly-additions.min.css lib/pficon/pficon.css
 
 meta=viewport==width=device-width,initial-scale=1
 
@@ -36,6 +39,7 @@ kcFormCardClass=card-pf
 kcFormSocialAccountListClass=pf-c-login__main-footer-links kc-social-links
 kcFormSocialAccountListGridClass=pf-l-grid kc-social-grid
 kcFormSocialAccountListButtonClass=pf-c-button pf-m-control pf-m-block kc-social-item kc-social-gray
+kcFormSocialAccountListButtonClassUaePass=pf-c-button pf-m-control pf-m-block kc-social-gray kc-social-uaepass kc-social-item
 kcFormSocialAccountGridItem=pf-l-grid__item
 
 kcFormSocialAccountNameClass=kc-social-provider-name
@@ -100,6 +104,16 @@ kcButtonDefaultClass=btn-default
 # classes defining size of the button
 kcButtonLargeClass=btn-lg
 kcButtonBlockClass=pf-m-block
+#Alternative button priority classes
+kcButtonAlternativePrimaryClass=kc-primary-btn
+kcButtonAlternativeSecondaryClass=kc-secondary-btn
+
+# margins
+kcMarginBottom1=pf-mb-1
+
+kcFormPasswordVisibilityButtonClass=pf-c-button pf-m-control
+kcFormPasswordVisibilityIconShow=fa fa-eye
+kcFormPasswordVisibilityIconHide=fa fa-eye-slash
 
 ##### css classes for input
 kcInputLargeClass=input-lg
