--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,40 @@
                         <artifactId>aspectjweaver</artifactId>
                         <version>${aspectj.version}</version>
                     </dependency>
+                    <!-- ⭐ JAX-RS Client API -->
+                    <dependency>
+                        <groupId>jakarta.ws.rs</groupId>
+                        <artifactId>jakarta.ws.rs-api</artifactId>
+                        <version>3.1.0</version>
+                    </dependency>
+
+                    <!-- ⭐ Jersey Client Implementation -->
+                    <dependency>
+                        <groupId>org.glassfish.jersey.core</groupId>
+                        <artifactId>jersey-client</artifactId>
+                        <version>3.1.3</version>
+                    </dependency>
+
+                    <!-- ⭐ Jersey HK2 Dependency Injection -->
+                    <dependency>
+                        <groupId>org.glassfish.jersey.inject</groupId>
+                        <artifactId>jersey-hk2</artifactId>
+                        <version>3.1.3</version>
+                    </dependency>
+
+                    <!-- ⭐ Jersey JSON Support (for Jackson) -->
+                    <dependency>
+                        <groupId>org.glassfish.jersey.media</groupId>
+                        <artifactId>jersey-media-json-jackson</artifactId>
+                        <version>3.1.3</version>
+                    </dependency>
+                    <!-- Jackson (if not already present) -->
+                    <dependency>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                        <version>2.15.2</version>
+                    </dependency>
+
                 </dependencies>
 
                 <configuration>
